--- a/assets/sass/layout/_layout.scss
+++ b/assets/sass/layout/_layout.scss
@@ -8,15 +8,15 @@ html, body {
 
 body {
   padding-top: 60px;
-  @include oa-breakpoint('md') {
+  @include breakpoint('md') {
     padding-top: 90px;
   }
-  @include oa-breakpoint('sm') {
+  @include breakpoint('sm') {
     padding-top: 90px;
     padding-left: 0;
     padding-right: 0;
   }
-  @include oa-breakpoint('xs') {
+  @include breakpoint('xs') {
     padding-top: 0;
   }
   #main-wrapper {
@@ -34,13 +34,13 @@ body {
     color: #CCC;
     background-color: #003853;
     border-top: 1px solid #e5e5e5;
-    @include oa-breakpoint('sm') {
+    @include breakpoint('sm') {
       margin-left: -$gridGutterWidth;
       margin-right: -$gridGutterWidth;
       padding-left: $gridGutterWidth;
       padding-right: $gridGutterWidth;
     }
-    @include oa-breakpoint('xs') {
+    @include breakpoint('xs') {
       margin-left: -$gridGutterWidth;
       margin-right: -$gridGutterWidth;
       padding-left: $gridGutterWidth;
